# myblob

./: .gitignore  CMakeLists.txt  LICENSE  README.md  代码审查清单.md  学习文档_第一阶段.md  学习路线图.md  第一版代码详解.md  第三版代码详解.md  第二版代码详解.md  第五版代码详解.md  第四版代码详解.md  第四版编译修复记录.md  编译修复记录_20250402.md  错误修复记录.md
example/: async_example.cpp  aws1_example.cpp  aws2_example.cpp  aws3.example.cpp  batch_example.cpp  cloud_example.cpp  httpbin_example.cpp  httpbin_https_example.cpp  iouring_example.cpp  multipartUpload_example.cpp  providers_example.cpp  sync_example.cpp  tasked_example.cpp
include/cloud/: aws.hpp  aws_signer.hpp  azure.hpp  azure_signer.hpp  cloud_service.hpp  gcp.hpp  gcp_signer.hpp  http_provider.hpp  minio.hpp  provider.hpp  transaction.hpp
include/network/: cache.hpp  config.hpp  connection.hpp  connection_manager.hpp  http_client.hpp  http_helper.hpp  http_message.hpp  http_request.hpp  http_response.hpp  https_message.hpp  io_uring_socket.hpp  message_failure_code.hpp  message_result.hpp  message_state.hpp  message_task.hpp  original_message.hpp  poll_socket.hpp  socket.hpp  tasked_send_receiver.hpp  tcp_settings.hpp  throughput_cache.hpp  tls_connection.hpp  tls_context.hpp
include/utils/: data_vector.hpp  defer.hpp  ring_buffer.hpp  timer.hpp  utils.hpp
src/cloud/: aws.cpp  azure.cpp  azure_signer.cpp  gcp.cpp  gcp_signer.cpp  http_provider.cpp  minio.cpp  provider.cpp  transaction.cpp
src/network/: aws_signer.cpp  cache.cpp  connection.cpp  connection_mannager.cpp  http_client.cpp  http_helper.cpp  http_message.cpp  http_request.cpp  http_response.cpp  https_message.cpp  io_uring_socket.cpp  message_result.cpp  message_task.cpp  original_message.cpp  poll_socket.cpp  tasked_send_receiver.cpp  throughput_cache.cpp  tls_connection.cpp  tls_context.cpp
src/utils/: utils.cpp
